[gd_scene load_steps=5 format=3 uid="uid://cpyvr7enxstwt"]

[ext_resource type="Texture2D" uid="uid://drmtfva8sxo3x" path="res://sprites/molotov.png" id="1_3y8he"]
[ext_resource type="Script" path="res://Scenes/entity scenes/molotov.gd" id="1_t26fl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t5r4j"]
radius = 22.0227

[sub_resource type="CircleShape2D" id="CircleShape2D_7ashj"]
radius = 12.0416

[node name="Molotov" type="Area2D" node_paths=PackedStringArray("sprite")]
script = ExtResource("1_t26fl")
sprite = NodePath("Marker2D/Sprite2D")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
scale = Vector2(4, 4)
texture = ExtResource("1_3y8he")

[node name="molotov_hitbox" type="Area2D" parent="Marker2D"]
collision_layer = 7
collision_mask = 7

[node name="hitbox" type="CollisionShape2D" parent="Marker2D/molotov_hitbox"]
shape = SubResource("CircleShape2D_t5r4j")

[node name="collision box" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7ashj")

[node name="Gravity" type="Timer" parent="."]
wait_time = 0.05

[node name="Gravity_start" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="area_entered" from="Marker2D/molotov_hitbox" to="." method="_on_molotov_hitbox_area_entered"]
[connection signal="body_entered" from="Marker2D/molotov_hitbox" to="." method="_on_molotov_hitbox_body_entered"]
[connection signal="timeout" from="Gravity" to="." method="_on_gravity_timeout"]
[connection signal="timeout" from="Gravity_start" to="." method="_on_gravity_start_timeout"]
